--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <script src="js/prefixfree.min.js"></script>
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
+    <script src="../js/prefixfree.min.js"></script>
 </head>
 
 <body>
@@ -20,19 +20,19 @@
         </ul>
         <!--//#gnb-->
         <div class="snsSet">
-            <a href="#"><img src="img/sns1.png" alt="about"></a>
-            <a href="#"><img src="img/sns2.png" alt="contact"></a>
-            <a href="#"><img src="img/sns3.png" alt="facebook"></a>
-            <a href="#"><img src="img/sns4.png" alt="twitter"></a>
-            <a href="#"><img src="img/sns5.png" alt="etc"></a>
+            <a href="#"><img src="../img/sns1.png" alt="about"></a>
+            <a href="#"><img src="../img/sns2.png" alt="contact"></a>
+            <a href="#"><img src="../img/sns3.png" alt="facebook"></a>
+            <a href="#"><img src="../img/sns4.png" alt="twitter"></a>
+            <a href="#"><img src="../img/sns5.png" alt="etc"></a>
         </div>
         <!--//.snsSet-->
     </header>
     <nav>
-        <a href="#"><img src="img/util1.png" alt=""></a>
-        <a href="#"><img src="img/util2.png" alt=""></a>
-        <a href="#"><img src="img/util3.png" alt=""></a>
-        <a href="#"><img src="img/util4.png" alt=""></a>
+        <a href="#"><img src="../img/util1.png" alt=""></a>
+        <a href="#"><img src="../img/util2.png" alt=""></a>
+        <a href="#"><img src="../img/util3.png" alt=""></a>
+        <a href="#"><img src="../img/util4.png" alt=""></a>
     </nav>
     <section>
         <article>
